# minipedia

./: .gitignore  README.md  build.zig  build.zig.zon  minidump-format.md
frontend/: bun.lockb  index.html  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  Home.vue  router.ts
frontend/src/Icons/: Search.svelte
frontend/src/routes/: +layout.js  +page.svelte
frontend/src/routes/wiki/[slug]/: +page.svelte  +page.ts
frontend/static/: article.css
search/: Cargo.toml  minisearch.h  rust-toolchain.toml
search/src/: lib.rs  main.rs
src/: MediaWikiParser.zig  archiver.zig  browser.zig  create_search.zig  get_article.zig  lzma.zig  main.zig  main.zig.old  minidump_reader.zig  minisearch.zig  passes.zig  slice_array.zig  stringzilla.c  stringzilla.h  stringzilla.zig  title_index.zig  title_search.zig  tracing.zig  wikixmlparser.cpp  wikixmlparser.h  wikixmlparser.zig
src/bench/: preprocess.zig
src/lib/: mpmc_queue.zig  slice_array.zig  tracing.zig  wiki_xml_parser.zig
src/lib/media_wiki_parser/: passes.zig
src/lib/tracing/: duck_tracer.c  duck_tracer.h
src/lib/wiki_xml_parser/: wikixmlparser.h
tools/: bundle_frontend.zig
