[package]
name = "minisearch"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "create_index"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crossbeam-channel = "0.5.13"
log = "0.4.22"
tantivy = "0.22.0"
